# RotaGenerator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  catch2.cmake  config.json  date.cmake  googletest.cmake  json.cmake  log_config.json  requirements.txt  rg.todo  rota.sublime-project  setup.py  spdlog.cmake  tox.ini  trompeloeil.cmake
.github/workflows/: autobuild.yml  cmake.yml
cmake/: catch2.cmake  fmt.cmake  json.cmake  spdlog.cmake  trompeloeil.cmake
docs/: Liturgical Calendar | August 2017.shtml  Universalis: Calendar for 2017.htm  spec.md
rota/: config.py  main.py  mass.py  reader.py  rota.py  rota_days.py
spiders/: loew.py  universalis.py
src/: CMakeLists.txt  addvolunteer.cpp  addvolunteer.h  addvolunteer.ui  event.cpp  event.h  events.cpp  events.h  eventsmodel.cpp  eventsmodel.h  main.cpp  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediator.cpp  mediator.h  rg.py  rgexception.cpp  rgexception.h  rota.cpp  rota.h  rotadata.cpp  rotadata.h  rotadetails.cpp  rotadetails.h  rotasmodel.cpp  rotasmodel.h  volunteer.cpp  volunteer.h  volunteerdlg.cpp  volunteerdlg.h  volunteerdlg.ui  volunteers.cpp  volunteers.h  volunteersmodel.cpp  volunteersmodel.h
src/rota/: exclude.py  main.py  mass.py  reader.py  rota.py  rota_days.py
src/spiders/: loew.py  universalis.py
tests/: CMakeLists.txt  main.cpp  mock_event.cpp  mock_event.h  mock_rota.cpp  mock_rota.h  mock_volunteer.cpp  mock_volunteer.h  test_config.py  test_event.cpp  test_event.h  test_events.cpp  test_events.h  test_exceptions.cpp  test_exclude.py  test_loew.py  test_mass.py  test_mediator.cpp  test_mediator.h  test_reader.py  test_rota.cpp  test_rota.h  test_rota.py  test_rota_days.py  test_rotadetails.cpp  test_rotadetails.h  test_rotas.cpp  test_rotas.h  test_volunteer.cpp  test_volunteer.h  test_volunteers.cpp  test_volunteers.h
